Canvas confetti and fix width scrollbar

--- a/public/css/dark.scss
+++ b/public/css/dark.scss
@@ -1,8 +1,6 @@
 @media (prefers-color-scheme: dark) {
     html {
-        width: 100vw;
         height: 100%;
-    
     }
     
     body, .datepicker-calendar-container, .select-dropdown, .timepicker-analog-display, input {
